[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/BaseScript.gd" type="Script" id=1]
[ext_resource path="res://Cantarell-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Styles/BaseUI.tres" type="Theme" id=3]
[ext_resource path="res://View-refresh_Gion.svg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Play.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.941176, 0.941176, 0.941176, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_right = 2048.0
content_margin_top = 2048.0
content_margin_bottom = 2048.0
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.839216, 0.839216, 0.839216, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 19
shadow_offset = Vector2( -2.564, 2.167 )
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.941176, 0.941176, 0.941176, 1 )

[sub_resource type="Animation" id=4]
length = 1.13
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( -4, 727 ), Vector2( -4, 645 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 727 ) ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.360784, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.745098, 0.745098, 0.745098, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Animation" id=9]
resource_name = "Loop"
length = 2.98
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 2.9 ),
"transitions": PoolRealArray( -2, 1, 1.86607 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="nmain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
Use_SongDataBase = true

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 759.0
custom_styles/panel = SubResource( 1 )

[node name="Stream" type="AudioStreamPlayer" parent="."]

[node name="OpenList" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -490.0
margin_top = -308.0
margin_right = 491.0
margin_bottom = 272.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 2 )

[node name="SongContainer" type="ScrollContainer" parent="OpenList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -484.5
margin_top = -290.0
margin_right = 484.5
margin_bottom = 291.0

[node name="SongList" type="VBoxContainer" parent="OpenList/SongContainer"]
margin_right = 969.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="SongDock" type="Panel" parent="."]
margin_left = -4.0
margin_top = 727.0
margin_right = 1276.0
margin_bottom = 809.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 3 )

[node name="Volume" type="HSlider" parent="SongDock"]
margin_left = 1022.0
margin_top = 42.0
margin_right = 1122.0
margin_bottom = 59.0
min_value = -100.0
max_value = 0.0

[node name="Anims" type="AnimationPlayer" parent="SongDock"]
anims/PostUp = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Name" type="Label" parent="SongDock"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -523.0
margin_top = 20.0
margin_right = -342.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
text = "Song Name"
autowrap = true

[node name="Artist" type="Label" parent="SongDock"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -523.0
margin_top = 42.0
margin_right = -396.0
margin_bottom = 89.0
text = "Unknown Artist"
autowrap = true

[node name="Progress" type="ProgressBar" parent="SongDock"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = 16.0
margin_right = 342.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, -15.343 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
percent_visible = false

[node name="Line2D" type="Line2D" parent="SongDock"]
position = Vector2( 0, 39 )
points = PoolVector2Array( 0, -39, 1280, -39 )
width = 1.0
default_color = Color( 0.683594, 0.683594, 0.683594, 1 )

[node name="Playmusic" type="TextureButton" parent="SongDock"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -19.0
margin_right = 13.5
margin_bottom = 8.0
texture_normal = ExtResource( 5 )
expand = true

[node name="Loop" type="TextureButton" parent="SongDock"]
margin_left = 1222.0
margin_top = 24.0
margin_right = 1262.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
expand = true

[node name="LL" type="Label" parent="SongDock"]
margin_left = 1120.0
margin_top = 20.0
margin_right = 1221.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
text = "Loop enabled."

[node name="LoopAnim" type="AnimationPlayer" parent="SongDock/LL"]
anims/Loop = SubResource( 9 )
anims/RESET = SubResource( 10 )

[connection signal="pressed" from="SongDock/Playmusic" to="." method="_on_Playmusic_pressed"]
[connection signal="pressed" from="SongDock/Loop" to="." method="_on_Loop_pressed"]
